# sdk

./: README.md
.github/workflows/: release.yaml
cli/: Cargo.toml  about.hbs  about.toml  build.rs  release.ps1
cli/installers/windows/: worlds.iss
cli/resources/: index.html.liquid
cli/src/: compile.rs  error.rs  main.rs  package.rs
cli/src/compile/: source.rs
cli/src/package/: game_icons.rs
compiler/: Cargo.toml
compiler/src/: attribution.rs  element.rs  error.rs  expression.rs  lib.rs  model.rs  problem.rs  source.rs  string_table.rs  symbol.rs  template.rs  text.rs  yaml.rs
compiler/src/element/: conditional.rs  element.rs  expression.rs  list.rs  location.rs  logical.rs  meta.rs  name.rs  named.rs  numeric.rs  quality.rs  storylet.rs  tag.rs  template.rs  text.rs  uri.rs
compiler/src/expression/: compile.rs  lexer.rs  parser.rs  token.rs
compiler/src/model/: obfuscate.rs
compiler/src/template/: compile.rs  lexer.rs  parse.rs  scanner.rs
compiler/src/text/: lexer.rs  parse.rs
compiler/src/yaml/: context.rs  document.rs  error.rs  mark.rs  node.rs  path.rs  result.rs  schema.rs  value.rs
engine/: package.json  pnpm-lock.yaml  version.ps1
engine/content/model/: package.json  tsconfig.json
engine/content/model/resources/: schema.json
engine/content/model/src/: index.ts
engine/runtime/api/: package.json  tsconfig.json
engine/runtime/api/src/: index.ts
engine/standalone/browser/: package.json  tsconfig.json
engine/state/api/: package.json
example/: config.toml
example/content/: blue_room.yaml  red_room.yaml  world.yaml
(+42 files in other folders)
