[package]
name = "worldtree-compiler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lazy_static = "1.4.0"
libyaml-safer = { git = "https://github.com/worldtreeengine/libyaml-safer", branch="crlf-fix" }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
